--- a/Poc_task/Views/Default/CreateRecord.cshtml
+++ b/Poc_task/Views/Default/CreateRecord.cshtml
@@ -6,7 +6,7 @@
 
 <h2>CreateRecord</h2>
 
-@using (Html.BeginForm("CreateRecord","default",FormMethod.Post)) 
+@using (Html.BeginForm("CreateRecord","default",FormMethod.Post ,new { @enctype = "multipart/form-data" } ))
 {
     @Html.AntiForgeryToken()
     
@@ -60,6 +60,19 @@
                 @Html.EditorFor(model => model.Sex, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Sex, "", new { @class = "text-danger" })
             </div>
+        </div>
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+
+                @Html.TextBox("UploadFile", "", new { type = "file" }) <br />
+        <input type="submit" value="UploadFile" />
+        @ViewBag.Message
+              
+
+                @*<input type="file" name="file" value="upload" class="btn btn-default" />*@
+            </div>
+           
+           
         </div>
 
         <div class="form-group">
